--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,14 @@ services:
       - DATA={"payload":"hello world!"}
     depends_on:
       - lambda
+
+  db:
+    image: mysql:8.0
+    command: --default-authentication-plugin=mysql_native_password
+    environment:
+      MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
+    volumes:
+      - db:/var/lib/mysql
+
+volumes:
+  db:
